[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/interactive/fragile_rocks_2.svg" type="Texture" id=1]
[ext_resource path="res://assets/interactive/fragile_rocks_3.svg" type="Texture" id=2]
[ext_resource path="res://assets/interactive/fragile_rocks_1.svg" type="Texture" id=3]
[ext_resource path="res://assets/interactive/fragile_rocks_4.svg" type="Texture" id=4]
[ext_resource path="res://scenes/objects/FragileRock.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/rock_disintegrate.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "break",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "gone",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 16, 36 )

[node name="FragileRock" type="StaticBody2D"]
script = ExtResource( 5 )

[node name="RockSprites" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 41 )
animation = "normal"

[node name="RockCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 42 )

[node name="RockCheck" type="Area2D" parent="."]

[node name="RockCheckCollision" type="CollisionShape2D" parent="RockCheck"]
position = Vector2( 0, -4 )
shape = SubResource( 43 )

[node name="RockAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="animation_finished" from="RockSprites" to="." method="_on_RockSprites_animation_finished"]
[connection signal="body_entered" from="RockCheck" to="." method="_on_RockCheck_body_entered"]
